--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "sharp": "^0.34.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "0.5.9",
