--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "geist": "^1.4.2",
     "lucide-react": "^0.508.0",
     "next": "13.4.19",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-typewriter": "^5.0.1",
